--- a/blog/src/assets/css/App.css
+++ b/blog/src/assets/css/App.css
@@ -120,7 +120,7 @@ body {
     scrollbar-width: none;
 }
 .main .contenedor-card {
-    width: 400px;
+    width: 600px;
 }
 .main .card {
     height: 350px;
@@ -136,6 +136,14 @@ body {
 .main .card img {
     width: 270px;
     background: #171717;
+}
+.card .card-title {
+    font-size: 30px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+}
+.card .card-text {
+    font-size: 19px;
+    font-family: Arial, Helvetica, sans-serif ; 
 }
 @media (max-width: 768px) {
     .main .card {
@@ -202,12 +210,11 @@ body {
 }
 .modal-header button  {
     background-color: #ff0000;
-    color: white;
+    color: black;
     border-radius: 20px;
 }
 .modal-body {
-    background: #27272a;
-    color: #ffff;
+    color: black;
 }
 
 /* 
