--- a/blog/src/assets/css/App.css
+++ b/blog/src/assets/css/App.css
@@ -178,7 +178,81 @@ body {
     font-size: 19px;
     font-family: Arial, Helvetica, sans-serif ; 
 }
-
+.card .show-comments {
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    padding: 2%;
+}
+.card .show-comments a {
+    text-decoration: none;
+    color: gray;
+    transition: all 0.5s ease;
+}
+.card .show-comments a:hover {
+    color: black;
+}
+.card .contenedor-comments {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.card .contenedor-comments .add-comment {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+.card .add-comment textarea {
+    width: 70%;
+    border: solid black 1px;
+    font-size: 18px;
+}
+.card .add-comment button {
+    width: 25%;
+    text-align: center;
+    border-style: none;
+    background-color: #004ED5;
+    border-radius: 20px;
+    height: 45px;
+    color: #fff;
+    transition: all 0.5s ease;
+}
+.card .add-comment button:hover {
+    background-color: #fff;
+    color: black;
+}
+.card .contenedor-comments .comments {
+    display: flex;
+    flex-direction: column;
+}
+.card .contenedor-comments .comments .ul li {
+    width: 100%;
+    text-align: left;
+    background: #e2e2e2;
+    padding: 1%;
+    color: #000000;
+    border: solid 1px #c2c2c2 ;
+    border-radius: 10px;
+}
+.card .contenedor-comments .comments .ul hr {
+    width: 85%;
+}
+.card .contenedor-comments .comments .ul  {
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+    background-color: #f1f1f1;
+    padding: 3%;
+    list-style-type: none;
+ }
+.card .contenedor-comments .comments .ul .btn1 {
+    color: #004ED5;
+ }
+ .card .contenedor-comments .comments .ul .btn2 {
+    color:#ff0000;
+ }
 /*
     Todo Fin Estilo Main
 */
